--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,9 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Attach to Chrome",
-            "port": 5001,
-            "request": "attach",
-            "type": "chrome",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
-            "name": "Python Debugger: Flask",
-            "type": "debugpy",
+            "name": "Flask Debug",
+            "type": "python",
             "request": "launch",
             "module": "flask",
             "env": {
@@ -22,19 +12,11 @@
             },
             "args": [
                 "run",
+                "--port=5001",
                 "--no-debugger",
-                "--no-reload",
-                "--port",
-                "5001"
+                "--no-reload"
             ],
-            "jinja": true,
-            "autoStartBrowser": false
-        },
-        {
-            "type": "chrome",
-            "name": "http://127.0.0.1:5001/",
-            "request": "launch",
-            "url": "http://127.0.0.1:5001/"
+            "jinja": true
         }
     ]
 }
