--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "djlint.showInstallError": false
+    "djlint.showInstallError": false,
+    "files.associations": {
+        "*.html": "jinja-html"
+    }
 }
